--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F73260D8"
-    tools:context=".MainActivity">
+    android:background="#F75032D8"
+    tools:context=".Login">
 
     <EditText
         android:id="@+id/txtMail"
@@ -25,7 +25,7 @@
         style="@android:style/Widget.Material.TextView"
         android:layout_width="203dp"
         android:layout_height="43dp"
-        android:text="REGISTRARTE"
+        android:text="Login"
         android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -76,30 +76,15 @@
         app:layout_constraintVertical_bias="0.401" />
 
     <Button
-        android:id="@+id/btnIngresar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF"
-        android:onClick="Registrar"
-        android:text="Registrar"
-        android:textColor="#D7000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.635" />
-
-    <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginBottom="92dp"
-        android:onClick="Login"
-        android:text="Login "
+        android:layout_marginBottom="168dp"
+        android:onClick="Ingresar"
+        android:text="Ingresar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.482"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnIngresar" />
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
